# bitte

./: .agenix.toml  .editorconfig  .envrc  .gitignore  .terraformignore  Gemfile  NOTICE  README-sam.md  README.md  Rakefile  ci.cue  cli  devshellModule.nix  flake-compat.nix  flake.nix  gemset.nix  network.nix  overlay.nix  providers.json  read.nix  release.nix  shell.nix  terraform-providers-overlay.nix  treefmt.toml
amis/: flake.nix  make-zfs-image.nix  upload-ami.nix
cli/: Cargo.toml  package.nix
cli/src/: main.rs  types.rs
cli/src/cli/: opts.rs
cli/src/types/: error.rs
clusters/: iam.nix
hosts/: default.nix
jobs/: atala.hcl  countdash.hcl
lib/: augment-nomad-job.nix  call-flake.nix  clusters.nix  default.nix  ensure-dependencies.nix  identites.nix  kv.nix  make-modules.nix  mk-bitte-stack.nix  mk-deploy.nix  mk-hashi-stack.nix  mk-job.nix  mk-nomad-host-volumes-config.nix  mk-nomad-job.nix  mk-nomad-task-sandbox.nix  mk-system.nix  net.nix  nomad-job.nix  physical-spec.nix  rec-import.nix  run-nomad-job.nix  sanitize.nix  secrets.nix  security-group-rules.nix  snake-case.nix  sops.nix  systemd-sandbox.nix  terralib.nix  warnings.nix
modules/: age.nix  allowed-uris.nix  amazon-ssm-agent.nix  boot.nix  caddy.nix  certgen.nix  consul-policies.nix  consul-snapshots.nix  consul-template.nix  consul.nix  default.nix  disabled-modules.nix  docker-registry.nix  envoy.nix  grafana.nix  hashi-snapshots.nix  hydra-declarative.nix  hydra-evaluator.nix  hydra-provisioner.nix  hydra.nix  ingress-config.nix  ingress.nix  initial-vault-secrets.nix  monitoring.nix  (+30 more)
(+355 files in other folders)
